s/bn_rotate_plane/bg_rotate_plane/g
s/bn_coplanar/bg_coplanar/g
s/bn_angle_measure/bg_angle_measure/g
s/bn_dist_pnt3_along_line3/bg_dist_pnt3_along_line3/g
s/bn_dist_pnt2_along_line2/bg_dist_pnt2_along_line2/g
s/bn_between/bg_between/g
s/bn_does_ray_isect_tri/bg_does_ray_isect_tri/g
s/bn_hlf_class/bg_hlf_class/g
s/bn_isect_planes/bg_isect_planes/g
s/bn_plane_pt_nrml/bg_plane_pt_nrml/g
s/bn_fit_plane/bg_fit_plane/g
s/bn_plane_closest_pt/bg_plane_closest_pt/g
s/bn_plane_pt_at/bg_plane_pt_at/g
s/BN_CLASSIFY/BG_CLASSIFY/g
        plane.h moved from libbn to libbg [7.32]
s/(#[[:space:]]*include[[:space:]]+["<])bn\/plot3\.h/\1bview\/plot3.h/g
        moved plot3.h header [7.32]
s/(#[[:space:]]*include[[:space:]]+["<])bn\/vert_tree\.h/\1bg\/vert_tree.h/g
        moved vert_tree.h header [7.32]
s/bn_vert_tree/bg_vert_tree/g
        moved vert_tree to libbg [7.32]
s/(#[[:space:]]*include[[:space:]]+["<])bn\/vectfont\.h/\1bview\/vectfont.h/g
        moved vertfont.h header to bview[7.32]
s/ID_MATERIAL/ID_COLORTAB/g
        renamed to make room for material objects [7.32]
s/GED_OK/BRLCAD_OK/g
s/GED_ERROR/BRLCAD_ERROR/g
s/GED_HELP/BRLCAD_HELP/g
s/GED_MORE/BRLCAD_MORE/g
s/GED_UNKNOWN/BRLCAD_UNKNOWN/g
s/bu_whereis\(/bu_whence\(/g
s/bu_which\(/bu_whence\(/g
s/rt_gettree_muves\(/rt_gettrees_and_attrs\(/g

7.36
----
s/V3DIR_FROM_AZEL\(/bn_vec_ae\(/g
s/AZEL_FROM_V3DIR\([[:space:]]*([^,]*),[[:space:]]*([^,]*),/bn_ae_vec\(&\1, &\2/g

7.38
----
s/bg_polygon_triangulate/bg_poly_triangulate/g
s/bg_nested_polygon_triangulate/bg_nested_poly_triangulate/g
s/OP_NMG_TESS/OP_TESS/g
s/tree_nmgregion/tree_tessellation/g
s/nmg_booltree_leaf_tess/rt_booltree_leaf_tess/g
s/-ghosting-intensity/-ghost-intensity/g
        rtwizard option simplified [7.38]
s/pl_mat_idn/MAT_IDN/g
s/pl_mat_zero/MAT_ZERO/g
s/pl_mat_copy/MAT_COPY/g
s/ambSlow=[0-9]*//g

7.40
----
s/bv_mesh_lod_custom_key/bu_data_hash/g
s/x/solid_report/g
s/db_search\(/db_search_old\(/g
s/Orca_hash_tbl/rti_udata/g