@@ -635,10 +635,10 @@ rt_nurb_plot(struct bu_list *vhead, struct rt_db_internal *ip, const struct bg_t
 
 	vp = c->ctl_points;
 	for (i = 0; i < c->s_size[0]; i++) {
-	    RT_ADD_VLIST(vhead, vp, BV_VLIST_LINE_MOVE);
+	    BV_ADD_VLIST(&RTG.rtg_vlfree, vhead, vp, BV_VLIST_LINE_MOVE);
 	    vp += coords;
 	    for (j = 1; j < c->s_size[1]; j++) {
-		RT_ADD_VLIST(vhead, vp, BV_VLIST_LINE_DRAW);
+		BV_ADD_VLIST(&RTG.rtg_vlfree, vhead, vp, BV_VLIST_LINE_DRAW);
 		vp += coords;
 	    }
 	}
@@ -648,9 +648,9 @@ rt_nurb_plot(struct bu_list *vhead, struct rt_db_internal *ip, const struct bg_t
 
 	    stride = c->s_size[1] * coords;
 	    vp = &c->ctl_points[j * coords];
-	    RT_ADD_VLIST(vhead, vp, BV_VLIST_LINE_MOVE);
+	    BV_ADD_VLIST(&RTG.rtg_vlfree, vhead, vp, BV_VLIST_LINE_MOVE);
 	    for (i = 0; i < c->s_size[0]; i++) {
-		RT_ADD_VLIST(vhead, vp, BV_VLIST_LINE_DRAW);
+		BV_ADD_VLIST(&RTG.rtg_vlfree, vhead, vp, BV_VLIST_LINE_DRAW);
 		vp += stride;
 	    }
 	}
