@@ -240,7 +240,7 @@ release(struct mged_state *s, char *name, int need_close)
     if (need_close)
 	dm_close(DMP);
 
-    RT_FREE_VLIST(&mged_curr_dm->dm_p_vlist);
+    BV_FREE_VLIST(&RTG.rtg_vlfree, &mged_curr_dm->dm_p_vlist);
     bu_ptbl_rm(&active_dm_set, (long *)mged_curr_dm);
     mged_slider_free_vls(mged_curr_dm);
     bu_free((void *)mged_curr_dm, "release: mged_curr_dm");
